sumo/tests/traci/VariableRetrieval/VehicleType/errors/UnsupportedVariable/errors.traci
Error: Answered with error to command 165: Unsupported variable specified
